tmp/funnel-output_path-MJ7YXDpV.tmp/gyak09/tests/unit/pods/errors/list/route-test.jshint.js
/home/ubuntu/workspace/gyak09/tmp/jshinter-output_path-xyX1ZocH.tmp/unit/pods/errors/list/route-test.jshint.js